--- a/plugin.xml
+++ b/plugin.xml
@@ -10,10 +10,10 @@
     <description>Cordova Datepicker Plugin</description>
     <license>Apache 2.0</license>
     <keywords>cordova,datepicker</keywords>
-    <author>Patrick Foh</author>
+    <author>Dirk-Jan Hoek</author>
 
     <js-module src="www/datepicker.js" name="Datepicker">
-        <clobbers target="window.plugins.datePicker" />
+        <clobbers target="datePicker" />
     </js-module>
 
     <!-- android -->
